# talktome

./: .env.template  .gitignore  License  README.md  development.md  pyproject.toml
.github/workflows/: ci.yml
devtools/: lint.py
src/talktome/: channel_cache.py  chatbot.py  database.py  discord_bot.py  prompts.py  setup_logging.py
src/talktome/crud/: channel_token_limits.py  request_tokens.py
src/talktome/models/: channel_token_limits.py  request_tokens.py
